style.css
@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@1,300&display=swap');


body {
    font-family: 'Titillium Web', sans-serif;
    margin: 0px;
    text-rendering: optimizeLegibility;
}



.bg-body{
    background-image:linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,.9)),url(img/bgPic.svg);
    background-size: cover;
    background-position: center ;
    position: relative;
}


:root {
    --primary-color: #f61009;
    --off-white: #f3f4f6;
    --dark-gray: #6b7280;
}

/****LISTS*****/

.list-nonbullet {
    list-style: none;
    padding-inline-start: 0px;
}

.list-item-inline {
    display: inline;
    padding: 0rem 1rem;
}

/****CONTAINER*****/

.container {
    padding: 0rem 1rem;
    
}

.container-centre {
    max-width: 700px;
    margin: auto;
    
}

.project-block{
    margin-left: 25%;
}



/****LINKS*****/

.link {
    text-decoration: none;
    box-sizing: border-box;
    padding: 0.5rem 1rem;
    font-weight: 300;

}

.link-primary {
    background-color: var(--primary-color);
    border: 2px solid var(--primary-color);
    color: white;
    display: inline-block;
    max-width: 140px;
    border-radius: 0.5rem;
    margin-right: 1rem ;
    text-align: center;
}

.link-secondary {
    color: var(--primary-color);
    display: inline-block;
    max-width: 140px;
    border-radius: 0.5rem;
    margin: 1rem auto;
    border: 2px solid var(--primary-color);
    text-align: center;
}

.link-primary:hover,
.link-primary:active {
    background-color: #ff706b;
}

.link-secondary:hover,
.link-secondary:active {
    background-color: #ce3b3b;
    color: white;
}

/****NAVIGATION*****/

.navigation {
    background-color: var(--primary-color);
    color: white;
    padding: 1rem;
    border-bottom-left-radius: 3rem;

}

.nav-brand {
    font-weight: bold;
    font-size: 2rem;
}

.nav-span {
    font-size: 2.5rem;
}

.nav-pills {
    text-align: right;
    font-size: 1.5rem;
}

.nav-pills li{
    display: inline-block;
    text-transform: uppercase;
}

.navigation .link {
    color: white;
    text-align: left;
}

.link-active {
    font-weight: 900;
    pointer-events: none;
}

.link:hover {
    color: black;
    font-weight: bold;
}





/****HEADER*****/

.hero {
    padding: 1rem;

}

.hero-img {
    max-width: 80%;
    max-width: 350px;
    display: block;
    margin: auto;
    padding-top: 5rem;
}

.project-img, .last-img{
    max-width: 80%;
    max-width: 350px;
    display: flex;
    margin: auto;
    padding-top: 1rem;
    padding-bottom: 2rem;
}

.last-img{
    padding-bottom: 0;
}

.project-heading{
    color: #fdfdff;
    margin-top: 1rem;
    padding-top: 1rem;
    text-align: center;
}

.last-heading{
    color: #fdfdff;
    padding-top: 1rem;
    text-align: center;
}

.hero-heading {
    color: #fdfdff;
    margin-top: 3rem;
    padding-top: 2rem;
    text-align: center;
}

.heading-inverted {
    color: var(--primary-color);
}

.text-shadow{
    text-shadow: 2px 2px red;
}

.align{
    text-align: left;
}

/****SPACES*****/

.margin-md {
    margin: auto; 
    align-items: center;
}

.button {
    margin-bottom: 1.5rem;
}



/****SECTIONS*****/

section {
    padding: 2rem;
}

.section h1 {
    text-align: center;
    padding: 2rem;
}

.ow {
    background-color: var(--off-white);
}

.tech-deets {
    text-align: center;
    padding: 1rem;
    margin: 1rem;
}

.blog-section{
    margin-bottom: 3rem;
}

/****FOOTER*****/

.footer {
    background-color: var(--primary-color);
    padding: 2rem 0rem;
    text-align: center;
    color: white;
    

}

.footer-header {
    font-size: large;
    font-weight: bold;
}

.footer .link {
    color: white;
}

.footer ul {
    padding-inline-start: 0px;
}

.fa-github:link,
.fa-github:hover {
    color: #495057;
}

.fa-twitter:link,
.fa-twitter:hover {
    color: #1da1f2
}

.fa-linkedin-in:link,
.fa-linkedin-in:hover {
    color: #0a66c2;
}

.fa-instagram:link,
.fa-instagram:hover {
    color: #c32aa3;
}

.fa-snapchat-ghost:link,
.fa-snapchat-ghost:hover {
    color: #fffc00;
}

.footer-icons{
    transition:color 0.2s;
    font-size: 1.5rem;
    padding-top: 1rem;
}


.snap-code {
    height: 200px;
    width: 200px;
    align-self: center;
    padding: 3rem;
}

.site-header {
    display: block;
    text-align: center;
    padding-top: 10rem;
}

.site-header-content {
    margin: 10px;
}

.body-color {
    background-color: #fffc00;
}

.para {
    padding: 1rem auto;
}

.white-text{
    color: ivory;
}

.bout-me {
    padding: 2rem;
    margin: auto;
    max-width: auto;
}

/****FAB ICONS*****/

.fab-icons{
    padding-right: 1rem;
    color: var(--primary-color);
}


.fa-edge{
    color:#3277BC ;
}

.fa-ticket-alt{
    color: rgb(255, 183, 0);
}

.fa-language {
    color: yellow;
}

.fa-apple-alt{
    color: #a70819;
}

.fa-digital-tachograph{
    color: rgb(255, 0, 255)
}

.fa-question-circle{
    color: green;
}

.fa-calculator{
    color: aquamarine;
}

.fa-baby{
    color: peachpuff;
}

.fa-birthday-cake{
    color: indianred;
}

.fa-money-check-alt{
    color: greenyellow
}

.fa-shapes{
    color: fuchsia;
}

.fa-trophy{
    color: gold;
}

.fa-sign-language{
    color: royalblue;
}

.fab{
    padding-right: 2rem;
}

